--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "Andreas Zetterqvist",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/supertest": "^6.0.2",
@@ -17,5 +18,8 @@
     "ts-jest": "^29.1.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "cors": "^2.8.5"
   }
 }
