--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,10 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1"
   }
 }
