--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "bootstrap": "^5.3.2"
+    "bootstrap": "^5.3.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.2.0"
   }
 }
