--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --pretty --transpile-only src/index.ts",
     "test": "jest"
-},
+  },
   "author": "Andreas Zetterqvist",
   "license": "ISC",
   "devDependencies": {
@@ -25,6 +25,8 @@
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1"
   }
