--- a/server/package.json
+++ b/server/package.json
@@ -22,9 +22,11 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@types/express-session": "^1.18.0",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.2.0",
     "react": "^18.2.0",
