--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^20.11.16",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
+    "mongodb-memory-server": "^9.1.6",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "ts-node-dev": "^2.0.0",
