--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.2.0"
+    "mongoose": "^8.2.0",
+    "react-router-dom": "^6.22.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
