--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "Andreas Zetterqvist",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
@@ -24,6 +25,7 @@
   },
   "dependencies": {
     "@types/express-session": "^1.18.0",
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
