--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
@@ -8,6 +9,7 @@
     "react-router-dom": "^6.22.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.22",
