--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "jest": "^29.7.0",
     "mongodb-memory-server": "^9.1.6",
     "supertest": "^6.3.4",
+    "supertest-session": "^5.0.1",
     "ts-jest": "^29.1.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
